---------------------------------------------------------------------------------------------------
Version: 3.0.11
Date: tba
  Changes:
    - Removed non hot air advanced casting recipes and allowed productivity in them instead.
    - Moved hot air glassware from py science 1 unlock to hot air unlock. Resolves https://github.com/pyanodon/pybugreports/issues/811
---------------------------------------------------------------------------------------------------
Version: 3.0.10
Date: 2025-1-2
  Changes:
    - Show fluid boxes all the time on Pumpjacks, Guar plantations, and Ionic Upgraders.
    - Add new lamp casting recipe to hot air blacklist.
    - Buffed most of the tholins recipes
    - Fixed Regenerative Heat Exchanger pipe covers having assembling machine graphics. Resolves https://github.com/pyanodon/pybugreports/issues/807
---------------------------------------------------------------------------------------------------
Version: 3.0.9
Date: 2024-11-29
  Changes:
    - Removed unused scrude-to-methane recipe from factoriopedia.
    - Added an unlock for the unused steam+naptha -> hydrogen recipe.
    - Added an unlock for unused vanadium pentoxide recipes.
    - Added new graphics for the reformer.
    - Increased the healh of the reformer from 100, 100, 100, 100 to 300, 600, 900, 1200.
    - Optimized VRAM consumption for the reformer.
    - Fixed cobalt oxide missing from hot air super alloy smelting. Resolves https://github.com/pyanodon/pybugreports/issues/554
---------------------------------------------------------------------------------------------------
Version: 3.0.8
Date: 2024-11-18
  Changes:
    - Fixed that the game would crash if you set your language to Russian.
---------------------------------------------------------------------------------------------------
Version: 3.0.7
Date: 2024-11-17
  Changes:
    - Fixed bitumen extractors invisible in 2.0. Resolves https://github.com/pyanodon/pybugreports/issues/714