@@ -374,18 +374,8 @@ tar-patch=Tar pit
 sulfur-patch=[img=entity.sulfur-patch] Sulfur vein
 bitumen-seep=[img=entity.bitumen-seep] Bitumen seep
 
-[controls]
-
-[mod-setting-name]
-
-[mod-setting-description]
-
 [tile-name]
 space=Empty space
-space-plate=Space platfrom section
 
-[wiki-info]
-oil=How to find oil and tar
-oil_info=To get oil or tar you need to find a "Bitumen seep" patch and place an oil derrick or a tar extractor upon the resource. The drill you placed down will require both drilling fluid and power for it to start up. After some time for the drill to drill down to the resource, it will stop using the drilling fluid and will begin outputting oil or tar-based on the entity placed on it. the default amount of fluid is between 100,000 and 400,000 per patch. this amount can be increased by both the entities level and the level of drilling fluid used. Max possible increase is x64 base value.
-
-[gui-game-finished]
+[entity-status]
+requires-drilling-fluid=Requires drilling fluid
